--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eterna Navbar</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <style>
-    /* Top bar style */
     .topbar {
       background: #2b2b2b;
       color: #ffffff;
@@ -21,7 +21,7 @@
     }
 
     .navbar-nav .nav-link.active {
-      color: #d9534f !important; /* Red highlight like Eterna */
+      color: #d9534f !important; 
     }
   </style>
 </head>
@@ -39,5 +39,4 @@
       </div>
     </div>
   </div>
-  
   
