--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -6,6 +6,7 @@
   <title>Eterna Navbar</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../css/app.css">
   <style>
     .topbar {
       background: #2b2b2b;
@@ -96,6 +97,36 @@
       </div>
 </div>
   </nav>
+  <div class="container1-about">
+    <div>
+    <a href="http://">Home /</a>
+    <a href="http://">About</a>
+    </div>
+    <h1>About</h1>
+   </div>
+  <section class="py-5">
+  <div class="container">
+    <h2 class="fw-bold">Voluptatem dignissimos provident</h2>
+    <p class="w-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim unde, aperiam soluta at nesciunt atque numquam minima officia quas, consequuntur facere doloribus, non incidunt cumque. Perferendis nihil blanditiis nulla minus.</p>
+
+    <div class="row align-items-center mt-4">
+      <div class="col-md-6">
+        <ul>
+          <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+          <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+          <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+        </ul>
+      </div>
+
+      <div class="col-md-6 mt-4 mt-md-0">
+        <img src="../assets/img/about.jpg" class="img-fluid rounded shadow">
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
   
