fix: fixed bg-color for header part2 + unique page color glow

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <ul class="home-header-nav-right">
 
-                <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Home</a></li>
+                <li><a href="" class="home-header-nav-right-item color-orang">Home</a></li>
                 <li><a href="./public/pages/about.html" class="home-header-nav-right-item fading-orang color-dark-grey">About</a></li>
                 <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Services</a></li>
                 <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Portfolio</a></li>
