--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -8,22 +8,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/app.css">
   <style>
-    .topbar {
-      background: #2b2b2b;
-      color: #ffffff;
-      font-size: 14px;
-      padding: 5px 0;
-    }
-
-    .topbar a {
-      color: #ffffff;
-      text-decoration: none;
-      margin-right: 20px;
-    }
-
-    .navbar-nav .nav-link.active {
-      color: #d9534f !important; 
-    }
   </style>
 </head>
 <div class="topbar">
@@ -121,6 +105,33 @@
       <div class="col-md-6 mt-4 mt-md-0">
         <img src="../assets/img/about.jpg" class="img-fluid rounded shadow">
       </div>
+    </div>
+  </div>
+</section>
+<section class="py-5 bg-light">
+  <div class="container text-center">
+    <div class="row g-4">
+
+      <div class="col-6 col-md-3">
+        <h3 class="fw-bold"> <i class="bi  me-3 bi-emoji-laughing"></i>232</h3>
+        <p class="text-muted">Happy Clients</p>
+      </div>
+
+      <div class="col-6 col-md-3">
+        <h3 class="fw-bold"> <i class="bi me-3  bi-journal-richtext"></i>521</h3>
+        <p class="text-muted">Projects</p>
+      </div>
+
+      <div class="col-6 col-md-3">
+        <h3 class="fw-bold"><i class="bi me-3  bi-headset"></i>1453</h3>
+        <p class="text-muted">Hours Of Support</p>
+      </div>
+
+      <div class="col-6 col-md-3">
+        <h3 class="fw-bold"><i class="bi me-3 bi-people"></i>32</h3>
+        <p class="text-muted">Hard Workers</p>
+      </div>
+
     </div>
   </div>
 </section>
