feat: update navbar links and add logo styling

--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -26,26 +26,26 @@
     </div>
   </div>
   <nav class="navbar navbar-expand-lg bg-white shadow-sm">
-    <div class="container">
-        <a class="navbar-brand fw-bold" href="#">
+    <div class="container mt-2 mb-2">
+        <a class="navbar-brand fw-bold logo " href="#">
         <span style="color:#d9534f;"></span> ETERNA
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
+        <ul class="navbar-nav ms-auto d-flex align-items-center gap-4">
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="../../index.html">Home</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link active" href="#">About</a>
+            <a class="nav-link active" href="./about.html">About</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="./services.html">Services</a>
           </li>
 
           <li class="nav-item">
