--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -51,7 +51,7 @@
     </div>
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
       <div class="container">
-        <a class="navbar-brand fw-bold" href="#">
+        <a class="navbar-brand fw-bold " href="#">
           <span style="color: #d9534f">|</span> ETERNA
         </a>
         <button
@@ -65,15 +65,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="../../index.html">Home</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" href="#">About</a>
+              <a class="nav-link active" href="./about.html">About</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="./services.html">Services</a>
             </li>
 
             <li class="nav-item">
