feat: update team member images with new assets

--- a/public/pages/team.html
+++ b/public/pages/team.html
@@ -99,7 +99,7 @@
       <div class="col-md-6">
         <div class="card p-3 shadow-sm">
           <div class="d-flex align-items-center">
-            <img src="/mnt/data/330445A0-47E5-4BC1-B8AB-3B31040CCC37.jpeg"
+            <img src="../assets/img/person/person-m-7.webp"
               class="rounded-circle me-3" width="90" height="90" alt="">
             <div>
               <h5 class="mb-1 fw-bold">Walter White</h5>
@@ -119,7 +119,7 @@
       <div class="col-md-6">
         <div class="card p-3 shadow-sm">
           <div class="d-flex align-items-center">
-            <img src="/mnt/data/330445A0-47E5-4BC1-B8AB-3B31040CCC37.jpeg"
+            <img src="../assets/img/person/person-f-8.webp"
               class="rounded-circle me-3" width="90" height="90" alt="">
             <div>
               <h5 class="mb-1 fw-bold">Walter White</h5>
@@ -139,7 +139,7 @@
       <div class="col-md-6">
         <div class="card p-3 shadow-sm">
           <div class="d-flex align-items-center">
-            <img src="/mnt/data/330445A0-47E5-4BC1-B8AB-3B31040CCC37.jpeg"
+            <img src="../assets/img/person/person-m-6.webp"
               class="rounded-circle me-3" width="90" height="90" alt="">
             <div>
               <h5 class="mb-1 fw-bold">Walter White</h5>
@@ -159,7 +159,7 @@
       <div class="col-md-6">
         <div class="card p-3 shadow-sm">
           <div class="d-flex align-items-center">
-            <img src="/mnt/data/330445A0-47E5-4BC1-B8AB-3B31040CCC37.jpeg"
+            <img src="../assets/img/person/person-f-4.webp"
               class="rounded-circle me-3" width="90" height="90" alt="">
             <div>
               <h5 class="mb-1 fw-bold">Walter White</h5>
