--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -123,7 +123,7 @@
 
     <section class="Services-top">
       <div>
-        <a href="#">Home</a>
+        <a href="../../index.html">Home</a>
         <span class="spanslash">/</span>
         <span>Services</span>
       </div>
@@ -255,6 +255,66 @@
         </div>
       </section>
     </section>
+     <footer class="text-light pt-5" style="background: #4c4c4c;">
+    <!-- Newsletter -->
+    <div class="container text-center mb-5 ">
+        <h3 class="fw-bold mb-3 ">Join Our Newsletter</h3>
+        <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
+        <form class="d-flex justify-content-center">
+            <input type="email" class="input-footer" placeholder="">
+            <button class="btn-footer">Subscribe</button>
+        </form>
+    </div>
+    <!-- Footer Links -->
+    <div class="container py-4 ">
+        <div class="row gy-4 ">
+          <!-- Column 1 -->
+            <div class="col-md-5">
+                <h5 class="fw-bold">Eterna</h5>
+                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>Phone: +1 5589 55488 55<br>Email: info@example.com</p>
+            </div>
+            <!-- Column 2 -->
+            <div class="col-md-2">
+                <h5 class="fw-bold font-st">Useful Links</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> Home</a></li>
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> About us</a></li>
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> Services</a></li>
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> Terms of Service</a></li>
+                </ul>
+            </div>
+            <!-- Column 3 -->
+            <div class="col-md-2 ">
+                <h5 class="fw-bold font-st">Our Services</h5>
+                <ul class="list-unstyled mb-2">
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> Web Design</a></li>
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> Web Development</a></li>
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> Product Management</a></li>
+                    <li><a href="#" class="text-decoration-none text-light"><i class="bi bi-chevron-compact-right"></i> Marketing</a></li>
+                </ul>
+            </div>
+            <!-- Column 4 -->
+            <div class="col-md-3 ">
+                <h5 class="fw-bold font-st">Follow Us</h5>
+                <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita </p>
+
+                <div class="d-flex gap-5">
+                    <a href="#" class="text-light fs-4"><i class="bi3 bi-twitter"></i></a>
+                    <a href="#" class="text-light fs-4"><i class="bi3 bi-facebook"></i></a>
+                    <a href="#" class="text-light fs-4"><i class="bi3 bi-instagram"></i></a>
+                    <a href="#" class="text-light fs-4"><i class="bi3 bi-linkedin"></i></a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <!-- Copyright -->
+    <div class="text-center py-3  mt-4">
+        © Copyright <strong>Eterna</strong> All Rights Reserved<br>
+        Designed by <span class="text-danger">BootstrapMade</span>
+    </div>
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
