--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
@@ -18,9 +19,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
     />
-    <title>Services</title>
-
-    <style>
+     <style>
       .topbar {
         background: #2b2b2b;
         color: #ffffff;
@@ -38,9 +37,8 @@
         color: #d9534f !important;
       }
     </style>
-  </head>
-
-  <body>
+</head>
+<body>
     <div class="topbar">
       <div class="container d-flex justify-content-between">
         <div>
@@ -120,141 +118,54 @@
         </div>
       </div>
     </nav>
-
     <section class="Services-top">
       <div>
         <a href="../../index.html">Home</a>
         <span class="spanslash">/</span>
-        <span>Services</span>
+        <span>Contact</span>
       </div>
-      <h1>Services</h1>
+      <h1>Contact</h1>
     </section>
-    <section class="MainServices">
-      <section class="OurServices">
-        <div>
-          <div class="icon-box">
-            <i class="bi bi-activity"></i>
-          </div>
-          <h3>Nesciunt Mete</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-            eos fugit error perferendis reprehenderit vitae!
-          </p>
+    <section class="contact">
+        <div class="address">
+            <i class="bi bi-geo-alt"></i>
+            <h3>address</h3>
+            <p>A108 Adam Street, New York, NY 535022</p>
         </div>
-        <div>
-          <div class="icon-box">
-            <i class="bi bi-broadcast"></i>
-          </div>
-          <h3>Eosle Commodi</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nobis
-            eius temporibus. Sunt, nulla incidunt!
-          </p>
+        <div class="Call-Us">
+            <i class="bi bi-telephone"></i>
+            <h3>Call Us</h3>
+            <p>+1 5589 55488 55</p>
         </div>
-        <div>
-          <div class="icon-box">
-            <i class="bi bi-easel"></i>
-          </div>
-          <h3>Ledo Markt</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia eum
-            minus nihil veritatis consequatur dolorem.
-          </p>
+        <div class="Email-Us">
+            <i class="bi bi-envelope"></i>
+            <h3>Email Us</h3>
+            <p>info@example.com</p>
         </div>
-        <div>
-          <div class="icon-box">
-            <i class="bi bi-bounding-box-circles"></i>
-          </div>
-          <h3>Asperiores Commodit</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur,
-            excepturi vel. Sapiente necessitatibus a modi temporibus facere!
-          </p>
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps?q=157+William+St,+New+York,+NY+10038&output=embed"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
-        <div>
-          <div class="icon-box">
-            <i class="bi bi-calendar4-week"></i>
-          </div>
-          <h3>Velit Doloremque</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-            itaque consequatur neque nesciunt, eveniet beatae vero voluptas
-            illo.
-          </p>
-        </div>
-        <div>
-          <div class="icon-box">
-            <i class="bi bi-chat-square-text"></i>
-          </div>
-          <h3>Dolori Architecto</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nisi
-            et fuga molestias consequatur ab?
-          </p>
-        </div>
-      </section>
-      <section class="OurSkills">
-        <div class="OurSkills-top">
-          <h1>Our Skills</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
-            voluptatibus.
-          </p>
-        </div>
-        <div class="OurSkills-main">
-          <div class="SkillsImg">
-            <img src="../assets/img/skills.jpg" />
-          </div>
-          <div class="RightSkills">
-            <div class="blabla">
-              <h1>Voluptatem dignissimos provident quasi corporis voluptas</h1>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
+        <div class="SendMessage">
+            <form>
+                <input type="text" placeholder="Your Name">
+                <input type="password" placeholder="Your Email">
+            </form>
+            <form>
+                <input type="text" placeholder="Subject">
+            </form>
+            <textarea placeholder="Message"></textarea>
+            <div>
+                <button>Send Message</button>
             </div>
-            <div class="progressBars">
-              <div class="progressBar">
-                <div class="spans">
-                <span>HTML</span>
-                <span>100%</span>
-                 </div>
-                <div>
-                  <progress id="progress" value="100" max="100">100%</progress>
-                </div>
-              </div>
-              <div class="progressBar">
-                <div class="spans">
-                <span>CSS</span>
-                <span>90%</span>
-                </div>
-                <div>
-                  <progress id="progress" value="90" max="100">90%</progress>
-                </div>
-              </div>
-              <div class="progressBar">
-                <div class="spans">
-                <span>JAVASCRIPT</span>
-                <span>75%</span>
-                </div>
-                <div>
-                  <progress id="progress" value="75" max="100">75%</progress>
-                </div>
-              </div>
-              <div class="progressBar">
-                <div class="spans">
-                <span>PHOTOSHOP</span>
-                <span>55%</span>
-                </div>
-                <div>
-                  <progress id="progress" value="55" max="100">55%</progress>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </section>
     </section>
+
      <footer class="text-light pt-5" style="background: #4c4c4c;">
     <!-- Newsletter -->
     <div class="container text-center mb-5 ">
@@ -316,6 +227,6 @@
     </div>
 </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
