--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -73,7 +73,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" href="./about.html">About</a>
+              <a class="nav-link " href="./about.html">About</a>
             </li>
 
             <li class="nav-item">
@@ -112,7 +112,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="../pages/contact.html">Contact</a>
+              <a class="nav-link active" href="../pages/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -126,45 +126,39 @@
       </div>
       <h1>Contact</h1>
     </section>
-    <section class="contact">
-        <div class="address">
-            <i class="bi bi-geo-alt"></i>
-            <h3>address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+  <div class="container mt-5">
+      <div class="row">
+      <div class=" col-6">
+        <div class="mb-4 border shadow ">
+          <i class="bi bi-geo-alt fs-2 text-danger ms-2"></i>
+          <h5 class="fw-bold mt-2 ms-2">Address</h5>
+          <p class="text-muted ms-2">A108 Adam Street, New York, NY 535022</p>
+          </div>
+          <div class="border">
+          <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.91700250266!2d-74.01004978459422!3d40.713268979331076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a15d6f2f0df%3A0xa4d3e23c2862f43!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1618384375028!5m2!1sen!2sus"
+          width="100%" height="350" style="border:0; border-radius: 8px;" allowfullscreen loading="lazy" >
+        </iframe>
         </div>
-        <div class="Call-Us">
-            <i class="bi bi-telephone"></i>
-            <h3>Call Us</h3>
-            <p>+1 5589 55488 55</p>
-        </div>
-        <div class="Email-Us">
-            <i class="bi bi-envelope"></i>
-            <h3>Email Us</h3>
-            <p>info@example.com</p>
-        </div>
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps?q=157+William+St,+New+York,+NY+10038&output=embed"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
-        <div class="SendMessage">
-            <form>
-                <input type="text" placeholder="Your Name">
-                <input type="password" placeholder="Your Email">
-            </form>
-            <form>
-                <input type="text" placeholder="Subject">
-            </form>
-            <textarea placeholder="Message"></textarea>
-            <div>
-                <button>Send Message</button>
-            </div>
-        </div>
-    </section>
+    </div>
+</div>
+</div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
      <footer class="text-light pt-5" style="background: #4c4c4c;">
     <!-- Newsletter -->
