fix: clean up contact section and update navigation links

--- a/public/pages/services.html
+++ b/public/pages/services.html
@@ -75,11 +75,11 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link active" href="./about.html">About</a>
+              <a class="nav-link " href="./about.html">About</a>
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="./services.html">Services</a>
+              <a class="nav-link active" href="./services.html">Services</a>
             </li>
 
             <li class="nav-item">
@@ -87,7 +87,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">Team</a>
+              <a class="nav-link" href="./team.html">Team</a>
             </li>
 
             <li class="nav-item">
