--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -126,6 +126,7 @@
       </div>
       <h1>Contact</h1>
     </section>
+    <section class="contact-section">
   <div class="container mt-5">
       <div class="row">
       <div class=" col-6">
@@ -141,7 +142,7 @@
         </iframe>
         </div>
     </div>
-
+</section>
 
 
 
