--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -128,39 +128,47 @@
     </section>
     <section class="contact">
         <div class="address">
+            <div class="icon-box">
             <i class="bi bi-geo-alt"></i>
+            </div>
             <h3>address</h3>
             <p>A108 Adam Street, New York, NY 535022</p>
         </div>
+        <div class="CallUs-Email">
         <div class="Call-Us">
+             <div class="icon-box">
             <i class="bi bi-telephone"></i>
+            </div>
             <h3>Call Us</h3>
             <p>+1 5589 55488 55</p>
         </div>
         <div class="Email-Us">
+             <div class="icon-box">
             <i class="bi bi-envelope"></i>
+            </div>
             <h3>Email Us</h3>
             <p>info@example.com</p>
+        </div>
         </div>
         <div class="map">
             <iframe
                 src="https://www.google.com/maps?q=157+William+St,+New+York,+NY+10038&output=embed"
                 style="border:0;"
-                allowfullscreen=""
+                allowfullscreen="100%"
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
         <div class="SendMessage">
-            <form>
+            <form class="Name-Email">
                 <input type="text" placeholder="Your Name">
                 <input type="password" placeholder="Your Email">
             </form>
-            <form>
+            <form class="Subject">
                 <input type="text" placeholder="Subject">
             </form>
             <textarea placeholder="Message"></textarea>
-            <div>
+            <div class="button-box">
                 <button>Send Message</button>
             </div>
         </div>
