--- a/public/pages/about.html
+++ b/public/pages/about.html
@@ -53,7 +53,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Team</a>
+            <a class="nav-link" href="./team.html">Team</a>
           </li>
 
           <li class="nav-item">
@@ -75,7 +75,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="./contact.html">Contact</a>
           </li>
 
         </ul>
