fix: update navigation links and enhance contact page layout

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <li><a href="./public/pages/services.html" class="home-header-nav-right-item fading-orang color-dark-grey">Services</a></li>
                 <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Services</a></li>
                 <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Portfolio</a></li>
-                <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Team</a></li>
+                <li><a href="./public/pages/team.html" class="home-header-nav-right-item fading-orang color-dark-grey">Team</a></li>
                 <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Pricing</a></li>
                 <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Blog</a></li>
                 <li class="">
@@ -129,7 +129,7 @@
                     </ul>
                 </li>
                 
-                <li><a href="" class="home-header-nav-right-item fading-orang color-dark-grey">Contact</a></li>
+                <li><a href="./public/pages/contact.html" class="home-header-nav-right-item fading-orang color-dark-grey">Contact</a></li>
 
             </ul>
 
