--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -111,7 +111,7 @@
               </ul>
             </li>
 
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link active" href="../pages/contact.html">Contact</a>
             </li>
           </ul>
@@ -151,14 +151,11 @@
             <p>info@example.com</p>
         </div>
         </div>
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps?q=157+William+St,+New+York,+NY+10038&output=embed"
-                style="border:0;"
-                allowfullscreen="100%"
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+        <div class="">
+           <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3021.91700250266!2d-74.01004978459422!3d40.713268979331076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a15d6f2f0df%3A0xa4d3e23c2862f43!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1618384375028!5m2!1sen!2sus"
+          width="100%" height="350" style="border:0; border-radius: 8px;" allowfullscreen loading="lazy" >
+        </iframe>
         </div>
         <div class="SendMessage">
             <form class="Name-Email">
