fix: border in mi4

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </div>
         </section>
         
-        </section> --> -->
+        </section> -->
 
         <secition class="mid4">
             <div class="mid4-container">
